# odooctl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  odooctl-deploy.yml  pr-labeler.yml  release.yml
docs/: api.md  backup-restore.md  catalog.md  configuration.md  deployment.md  disaster-recovery.md  doctor.md  domains-ssl.md  environments.md  examples.md  execution-modes.md  getting-started.md  git-sync.md  installation.md  migration.md  odoo-versions.md  rbac.md  rollback.md  runner-architecture.md  security.md  staging-clone.md  users-and-access.md  web-ui.md
docs/operations/: deploy-staging-production.md  integration-status.md  integration-testing.md
docs/plans/: 2026-05-24-mvp.md  2026-05-25-backup-restore-hardening.md  2026-05-25-clone-sanitization-hardening.md  2026-05-25-deploy-safety-pipeline.md  2026-05-26-odooctl-vnext-build-plan.md  README.md  final-run-progress.md  m10-onboarding-catalog.md  m11-security-architecture.md  m12-api-runner.md  m13-web-ui-mvp.md  m14-domain-backup-ux.md  m15-migration-assistant.md  m6-service-layer.md  m7-operation-engine.md  m8-import-takeover.md  m9-environment-branch-model.md  progress.md  roadmap-2026-07-production-readiness.md
docs/stylesheets/: newsprint.css  vercel.css
examples/: docker-compose.yml  github-actions.yml  odooctl.yml
examples/multidb/: README.md  odooctl.yml
examples/sanitize/: disable_connectors.sql  staging.sql
experiments/2026-05-31-kanban-scan-suite/: report-1-claude-opus-feature-security-scan.md  report-2-gpt55-codex-feature-security-scan.md  report-3-odoo18-19-full-api-ctl-experiment.md  report-4-opus-next-steps-synthesis.md
experiments/2026-07-19-post-hardening-rescan/: codex-findings-triage.md  codex-review.md  opus-rescan-findings.md
experiments/odoo19-community-staging/: 2026-05-30-default-model-verification.md  2026-05-30-m7-live-fixture-verification.md  README.md  odooctl.yml
experiments/odoo19-community-staging/.sanitize/: staging.sql
landing/: index.html
odooctl/: __main__.py  cli_selector.py  config.py  context.py  main.py  preflight.py  registry.py
odooctl/adapters/: db.py  docker_compose.py  filestore.py  postgres.py  reverse_proxy.py  s3.py
odooctl/api/: __init__.py  app.py  auth.py  queue.py  routes_auth.py  routes_operations.py  routes_projects.py
odooctl/catalog/: __init__.py  registry.py  render.py  schema.py
odooctl/catalog/manifests/: companions.yaml  (+3 more)
odooctl/commands/: backup.py  branch.py  catalog.py  clone.py  deploy.py  doctor.py  domain.py  dr.py  env.py  github_actions.py  import_cmd.py  init.py  logs.py  migrate.py  ops.py  project.py  promote.py  restore.py  rollback.py  runner.py  schedule.py  security.py  serve.py  setup.py  status.py  sync.py  update_modules.py  user.py  validate.py
odooctl/domains/: __init__.py  base.py  traefik.py
odooctl/importer/: __init__.py  adopt.py  detect.py  models.py  report.py
odooctl/metadata/: models.py  store.py
odooctl/migration/: __init__.py  matrix.py  openupgrade.py  rehearse.py  scan.py
odooctl/odoo/: db_swap.py  healthcheck.py  module_update.py  neutralize.py  sanitize.py
odooctl/operations/: __init__.py  audit.py  container_status.py  engine.py  locks.py  models.py  runner_heartbeat.py  store.py
odooctl/runner/: __init__.py  worker.py
odooctl/security/: __init__.py  principals.py  rbac.py  redaction.py  runner_contract.py  secrets.py  sessions.py  tokens.py  users.py
odooctl/services/: __init__.py  backup.py  branch.py  clone.py  context.py  deploy.py  domain.py  dr.py  environment.py  models.py  project.py  promote.py  restore.py  restore_points.py  sync.py
odooctl/utils/: logging.py  paths.py  shell.py
odooctl/web/: README.md  __init__.py
tests/: conftest.py  test_api.py  test_api_identity.py  test_backup.py  test_backup_verify.py  test_branch_status.py  test_catalog.py  test_cli_smoke.py  test_clone.py  test_clone_swap.py  test_config.py  test_config_overlay.py  test_containers_and_access.py  test_context.py  test_db_adapter.py  test_deploy.py  test_doctor.py  test_domain.py  test_dr.py  test_env_cmd.py  test_examples.py  test_filestore_volume.py  test_github_actions.py  test_healthcheck.py  test_import_adopt.py  test_import_detect.py  test_import_hardening.py  test_import_report.py  test_m14_web.py  test_metadata.py  test_migration.py  test_module_update.py  test_neutralize.py  test_operations.py  test_ops_cmd.py  test_project_selector_matrix.py  test_promote.py  test_protected_guards.py  test_registry.py  test_restore.py  (+17 more)
tests/fixtures/: odoo19-community-staging-compose.yml
tests/integration/: conftest.py  test_lifecycle.py
(+1 files in other folders)
