[project]
name = "odooctl"
version = "0.1.0"
description = "CLI-first Odoo-aware deployment platform for self-hosted Odoo projects"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "odooctl maintainers" },
]
keywords = ["odoo", "deployment", "docker-compose", "backup", "staging", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "build>=1"]
s3 = ["boto3>=1.34"]
api = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/Rami-0/odooctl"
Documentation = "https://github.com/Rami-0/odooctl#readme"
Repository = "https://github.com/Rami-0/odooctl"
Issues = "https://github.com/Rami-0/odooctl/issues"

[project.scripts]
odooctl = "odooctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odooctl"]

[tool.hatch.build.targets.wheel.force-include]
"odooctl/web/dist" = "odooctl/web/dist"

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/odooctl",
  "/tests",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"odooctl/web/dist" = "odooctl/web/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
  "unit: fast unit-level tests that do not require external services",
  "integration: tests that require external services or real operator configuration",
  "docker: tests that require Docker or docker compose",
]

[tool.ruff]
line-length = 100
target-version = "py311"
